--- a/login.html
+++ b/login.html
@@ -4,34 +4,45 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>eMercado - Todo lo que busques está aquí</title>
-  
+  <title>eMercado - Iniciar sesión</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/styles.css" rel="stylesheet">
-  <style>
-    body {
-      background-color: rgb(248, 249, 250);
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/login.css">
+  <script src="js/session-manager.js"></script>
 </head>
 
 <body>
-  <main class="mt-5">
-    <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+  <main>
+    <div class="centered-items-vertically">
+      <div class="container">
+        <div class="row my-3 my-md-5">
+          <div class="d-none d-sm-block col-8 col-lg text-center my-auto mx-auto py-5">
+            <img src="img/logo_ecommerce.svg" class="logo-ecommerce">
+          </div>
+          <div class="form-col-fixed mx-auto">
+            <div class="form mx-sm-5">
+              <form>
+                <h1 class="centered-text">Iniciar sesión</h1>
+                <img src="img/profile_icon.svg" class="profile-icon" alt="Ícono de cuenta de usuario"><br>
+                <label class="login-label" for="user">E-mail</label><br>
+                <input class="login-input" type="email" name="user" id="user" placeholder="Ingrese su E-mail"
+                  required><br><br>
+                <label class="login-label" for="password">Contraseña</label><br>
+                <input class="login-input" type="password" name="password" id="password"
+                  placeholder="Ingrese su contraseña" required><br><br>
+                <label for="togglePassword">
+                  <input type="checkbox" id="togglePassword">Mostrar contraseña
+                </label><br>
+                <input type="submit" class="btn-submit" id="btn-submit" value="Ingresar"><br>
+                <p class="centered-text"><a class="link-pass" href="">¿Has olvidado tu contraseña?</a>
+                </p>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </main>
-  <footer class="text-muted">
-    <div class="container">
-      <p class="float-end">
-        <a href="#">Volver arriba</a>
-      </p>
-      <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a></p>
-    </div>
-  </footer>
   <script src="js/login.js"></script>
 </body>
 
